Fix header logo x-scrollbar

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -9854,18 +9854,13 @@ img {
   height: auto;
 }
 
-.logo a {
-  display: inline-block;
-  background-image: url("../img/logo.png");
+.logo img {
+  display: block;
   text-decoration: none;
   background-size: contain;
   background-repeat: no-repeat;
   height: 40px;
-  width: 188px;
-  /*  將文字推出 <h1>  */
-  text-indent: 101%;
-  overflow: hidden;
-  white-space: nowrap;
+  width: auto;
 }
 
 .display-1 {
